src/test/ui/issues/issue-23080.stderr
error[E0380]: auto traits cannot have methods or associated items
  --> $DIR/issue-23080.rs:5:8
   |
LL | unsafe auto trait Trait {
   |                   ----- auto trait cannot have items
LL |     fn method(&self) {
   |        ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0380`.
